who needs a self-portrait anyway

--- a/_less/main.less
+++ b/_less/main.less
@@ -106,7 +106,7 @@ footer { font-family: @sans; clear: both; }
 
 h1#title {
   font-size: @bigheading * .6;
-  margin-bottom: 2 * @padding;
+  margin: 2 * @padding 0;
   text-align: center;
   text-transform: uppercase;
   img { float: left; margin-left: -100px; }
