--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 id="title"><img src="/img/me.png"/><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
+  <h1 id="title"><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
 </header>
 
 {% if page.draft %}
