--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ article.link:before{content:url('/img/link.png');}
 article.photo:before{content:url('/img/photo.png');}
 article.quote:before{content:url('/img/quote.png');}
 article.video:before{content:url('/img/video.png');}
-footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;clear:both;}
+footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:12px;clear:both;}
 h1#title{font-size:23.099999999999998px;margin:56px 0;text-align:center;text-transform:uppercase;}h1#title img{float:left;margin-left:-100px;}
 h1#title a:hover{background-color:#f7f7f7;}
 h1#title .p{border-bottom:1px solid #dedede;margin-bottom:28px;padding-bottom:28px;color:#264e59;display:block;font-size:67.375px;letter-spacing:-2px;margin-bottom:10px;padding-bottom:4px;}
