--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ article.link:before{content:url('/img/link.png');}
 article.photo:before{content:url('/img/photo.png');}
 article.quote:before{content:url('/img/quote.png');}
 article.video:before{content:url('/img/video.png');}
-footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:12px;clear:both;}
+footer{font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;clear:both;}
 h1#title{font-size:23.099999999999998px;margin:56px 0;text-align:center;text-transform:uppercase;}h1#title img{float:left;margin-left:-100px;}
 h1#title a:hover{background-color:#f7f7f7;}
 h1#title .p{border-bottom:1px solid #dedede;margin-bottom:28px;padding-bottom:28px;color:#264e59;display:block;font-size:67.375px;letter-spacing:-2px;margin-bottom:10px;padding-bottom:4px;}
@@ -37,11 +37,13 @@ h1#title .f{color:#e71a5d;font-family:"Palatino","Palatino Linotype","URW Pallad
 h1#draft{color:#f8c02c;float:left;font-size:200px;line-height:0;margin:150px 0 -200px -525px;-moz-text-shadow:-3px 2px 1px #ffffff;-webkit-text-shadow:-3px 2px 1px #ffffff;text-shadow:-3px 2px 1px #ffffff;text-transform:uppercase;-webkit-transform:rotate(-90deg);-moz-transform:rotate(-90deg);transform:rotate(-90deg);}
 #posts{border-bottom:1px solid #dedede;margin-bottom:28px;padding-bottom:28px;padding-bottom:0;}
 #post article{padding-bottom:0;}
-.older{float:left;}
-.newer{float:right;}
-.older a,.newer a{color:#e71a5d;}
+#paginator{border-bottom:1px solid #dedede;margin-bottom:28px;padding-bottom:28px;float:left;width:100%;}#paginator p{margin-bottom:0;}
+#paginator .older{float:left;}
+#paginator .newer{float:right;}
+#paginator .older a,#paginator .newer a{color:#e71a5d;}
 #contact{color:#264e59;display:none;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-style:normal;font-weight:bold;}#contact table{width:100%;}
 #contact label{line-height:1;}
 #contact input[type="text"],#contact textarea{-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;border:1px solid #ddd;font-family:"proxima-nova-1","proxima-nova-2",sans-serif;font-size:14px;padding:6px;}
 #contact input[type="text"]{width:90%;}
 #contact textarea{height:125px;width:95%;}
+#license{position:relative;top:3px;}
