add max-height and vertical scrolling to pre/code

--- a/_less/main.less
+++ b/_less/main.less
@@ -30,6 +30,8 @@ a { .rounded-corners(3px);
     
 pre { .code; .rounded-corners;
   border: 1px solid @textcolor*2;
+  max-height: 500px; 
+  overflow: auto;
   overflow-x: auto;
   padding: @basefont;
   &::-webkit-scrollbar { 
