--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -21,7 +21,7 @@
         </td>
       </tr>
     </table>
-    <input type="submit" value="Send message" />
-    or <a href="{{ page.url }}" id="cancel_email">Cancel</a>
+    <input type="submit" value="Send message" onclick="_gaq.push(['_trackEvent', 'comment', 'submitted'])"/>
+    or <a href="{{ page.url }}" id="cancel_email" onclick="_gaq.push(['_trackEvent', 'comment', 'canceled'])"/>>Cancel</a>
   </form>
 </aside>
