fix post footer

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,12 +23,12 @@ layout: default
     {% endif %}
 
     <aside>
-      If you have any comments or concerns, feel free to <a
-      id="send_email" href="mailto:{{ site.email }}" onclick="_gaq.push(['_trackEvent', 'comment', 'initiated'])"/>>send an email to
-      {{ site.email }}</a> or mention <a
-      href="http://twitter.com/?status=%40philtr">@philtr</a> on Twitter. I'll
-      update this post with any insightful, interesting, or corrective
-      comments.
+      If you have any comments or concerns, feel free to <a id="send_email"
+      href="mailto:{{ site.email }}" onclick="_gaq.push(['_trackEvent',
+      'comment', 'initiated'])"/>send an email to {{ site.email }}</a> or
+      mention <a href="http://twitter.com/?status=%40philtr">@philtr</a> on
+      Twitter. I'll update this post with any insightful, interesting, or
+      corrective comments.
     </aside>
     {% include contact_form.html %}
   </article>
