remove extra > from cancel button

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -22,6 +22,6 @@
       </tr>
     </table>
     <input type="submit" value="Send message" onclick="_gaq.push(['_trackEvent', 'comment', 'submitted'])"/>
-    or <a href="{{ page.url }}" id="cancel_email" onclick="_gaq.push(['_trackEvent', 'comment', 'canceled'])"/>>Cancel</a>
+    or <a href="{{ page.url }}" id="cancel_email" onclick="_gaq.push(['_trackEvent', 'comment', 'canceled'])"/>Cancel</a>
   </form>
 </aside>
