--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <p>Original content is <a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons Attribution-NonCommercial 3.0">Creative Commons <img id="license" src="/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2011 Phillip T. Ridlen | <a href="http://feeds.feedburner.com/philtrblog">Subscribe</a></p>.
+  <p>Original content is <a href="http://creativecommons.org/licenses/by-nc/3.0/" title="Creative Commons Attribution-NonCommercial 3.0">Creative Commons <img id="license" src="/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2011 Phillip T. Ridlen. | <a href="http://feeds.feedburner.com/philtrblog">Subscribe</a></p>
 </footer>
