make colors not so POW

--- a/_less/colors.less
+++ b/_less/colors.less
@@ -1,8 +1,8 @@
-@bgcolor: #F7F7F7;
-@textcolor: #264E59;
-@linkcolor: #21B080;
-@accent1: #F8C02C;
-@accent2: #E71A5D;
-@highlight: #DBF9FE;
+@bgcolor: #FFFFFF;
+@textcolor: #333333;
+@linkcolor: #264E59;
+@accent1: #eeeeee;
+@accent2: #777777;
+@highlight: #F7F7F7;
 @bordercolor: @bgcolor - #191919;
 @unimportant: @bgcolor - #777;
