--- a/_less/mixins.less
+++ b/_less/mixins.less
@@ -1,6 +1,7 @@
 .heading { .letterpress(2px);
   font-family: @display;
-  line-height: 1;}
+  line-height: 1;
+  a { text-decoration: none; } }
 .code {
   background: @highlight;
   font-family: @code;}
