--- a/_less/colors.less
+++ b/_less/colors.less
@@ -1,8 +1,9 @@
 @bgcolor: #FFFFFF;
 @textcolor: #333333;
 @linkcolor: #264E59;
-@accent1: #eeeeee;
+@accent1: #999999;
 @accent2: #777777;
+@accent3: #E71A5D;
 @highlight: #F7F7F7;
 @bordercolor: @bgcolor - #191919;
 @unimportant: @bgcolor - #777;
