--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,23 +1,3 @@
-<link rel="stylesheet" href="/css/main.css" />
 
-<script src="http://code.jquery.com/jquery-1.6.min.js"></script>
-<script type="text/javascript">
-  {% include js/contact.js %}
-</script>
-
-<script src="http://use.typekit.com/hcg3lre.js"></script>
-<script>try{Typekit.load();}catch(e){}</script>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-6176136-5']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
+    <link rel="stylesheet" href="/css/main.css" />
+    <script type="text/javascript" src="/js/all.js"></script>
