--- a/_includes/libraries.html
+++ b/_includes/libraries.html
@@ -1,3 +1,3 @@
 
     <link rel="stylesheet" href="/css/main.css" />
-    <script type="text/javascript" src="/js/all.js"></script>
+    <script src="/js/all.js"></script>
