--- a/_less/main.less
+++ b/_less/main.less
@@ -180,6 +180,6 @@ h1#draft {
   input[type="text"] { width: 90%; }
   textarea { height: 125px; width: 95%; } }
 
-#license { 
+#license, #rss { 
   position: relative;
   top: 3px; }
