add support for music posts

--- a/_less/main.less
+++ b/_less/main.less
@@ -97,6 +97,7 @@ article { .dividerBottom;
     margin-top: 8px; }
   &.blog:before  { content: url('/img/blog.png'); }
   &.link:before  { content: url('/img/link.png'); }
+  &.music:before  { content: url('/img/music.png'); }
   &.photo:before { content: url('/img/photo.png'); }
   &.quote:before { content: url('/img/quote.png'); }
   &.video:before { content: url('/img/video.png'); }}
@@ -146,6 +147,17 @@ h1#draft {
 #posts { .dividerBottom; padding-bottom: 0; }
 
 #post article { padding-bottom: 0; }
+
+.album {
+  .cover { float: left; margin-right: @padding; }
+  .music_info {
+    padding: @padding+@basefont 0;
+    .album_title { font-size: @bigheading; } }
+    .artist { line-height: 1; }
+    a { font-weight: bold; text-decoration: none; }
+  .review { clear: left; }
+
+}
 
 #paginator {
   float: left; 
