fix links in music review section

--- a/_less/main.less
+++ b/_less/main.less
@@ -152,12 +152,10 @@ h1#draft {
   .cover { float: left; margin-right: @padding; }
   .music_info {
     padding: @padding+@basefont 0;
-    .album_title { font-size: @bigheading; } }
+    .album_title { font-size: @bigheading; }
     .artist { line-height: 1; }
-    a { font-weight: bold; text-decoration: none; }
-  .review { clear: left; }
-
-}
+    a { font-weight: bold; text-decoration: none; } }
+  .review { clear: left; } }
 
 #paginator {
   float: left; 
