vertically align album info better

--- a/_less/main.less
+++ b/_less/main.less
@@ -151,7 +151,7 @@ h1#draft {
 .album {
   .cover { float: left; margin-right: @padding; }
   .music_info {
-    padding: @padding+@basefont 0;
+    padding: @padding*2 0;
     .album_title { font-size: @bigheading; }
     .artist { line-height: 1; }
     a { font-weight: bold; text-decoration: none; } }
