change sitemap generator plugin

--- a/_less/main.less
+++ b/_less/main.less
@@ -108,7 +108,10 @@ footer {
   clear: both; 
   a { text-decoration: none; } }
 
+#search form { float: right; padding: 0 0 @padding 0; }
+
 h1#title {
+  clear: both;
   font-size: @bigheading * .6;
   margin: 2 * @padding 0;
   text-align: center;
