--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>{% if page.title %}{{ page.title }} | {% endif %}Phillip's Notes, Quotes, and Other Miscellany</title>
     <link href="http://feeds.feedburner.com/philtrblog" rel="alternate" title="Phillip's Blog" type="application/atom+xml" />
-    
+
     {% include libraries.html %}
 
   </head>
   <body>
+
+    {% include search.html %}
 
     {% include sadface.html %}
 
