--- a/_less/main.less
+++ b/_less/main.less
@@ -108,12 +108,11 @@ footer {
   clear: both; 
   a { text-decoration: none; } }
 
-#search form { float: right; padding: 0 0 @padding 0; }
+#search { text-align: center; }
 
 h1#title {
-  clear: both;
   font-size: @bigheading * .6;
-  margin: 2 * @padding 0;
+  margin: @padding 0;
   text-align: center;
   text-transform: uppercase;
   img { float: left; margin-left: -100px; }
