--- a/_less/main.less
+++ b/_less/main.less
@@ -160,7 +160,8 @@ h1#draft {
   .review { clear: left; } }
 
 #paginator {
-  float: left; 
+  float: left;
+  padding-bottom: @padding;
   width: 100%;
   p { .rounded-corners(5px);
     background: @linkcolor;
