--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,6 @@
   Attribution-NonCommercial 3.0">Creative Commons <img id="license"
   src="/img/cc-by-nc.png" alt="CC-BY-NC 3.0" /></a> 2010-2011 Phillip T.
   Ridlen.</p>
-  <p><a href="http://feeds.feedburner.com/philtrblog"><img id="rss" src="/img/rss.png"/> RSS</a>
-    {% include search.html %}
-  </p>
+  <p>{% include search.html %}</p>
+  <p><a href="http://feeds.feedburner.com/philtrblog"><img id="rss" src="/img/rss.png"/> RSS</a></p>
 </footer>
