add padding around title back in

--- a/_less/main.less
+++ b/_less/main.less
@@ -112,7 +112,7 @@ footer {
 
 h1#title {
   font-size: @bigheading * .6;
-  margin: @padding 0;
+  margin: @padding*2 0;
   text-align: center;
   text-transform: uppercase;
   img { float: left; margin-left: -100px; }
