actually use titlecase for the title

--- a/_less/main.less
+++ b/_less/main.less
@@ -112,9 +112,8 @@ footer {
 
 h1#title {
   font-size: @bigheading * .6;
-  margin: @padding*2 0;
+  margin: @padding*2 0 @padding*3 0;
   text-align: center;
-  text-transform: uppercase;
   img { float: left; margin-left: -100px; }
   a:hover { background-color: @bgcolor; }
   .p { .dividerBottom;
