update contact form wording

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -10,7 +10,7 @@
           <input type="text" name="name" id="name" />
         </td>
         <td class="field">
-          <label for="email">Your Email:</label><br/>
+          <label for="email">Your Email Address:</label><br/>
           <input type="text" name="email" id="email" />
         </td>
       </tr>
