add thanks message to contact form

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,6 +1,6 @@
 <aside id="contact">
   <form action="http://contact.blog.phillipridlen.com" method="post">
-    <input type='hidden' name='return' value='{{ site.url }}{{ page.url }}' />
+    <input type='hidden' name='return' value='{{ site.url }}{{ page.url }}?thanks' />
     <input type='hidden' name='send_to' value='{{ site.email }}' />
     <input type='hidden' name='subject' value='Re: {{ page.title }}'>
     <table>
