--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,11 @@
   <h1 id="title"><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
 </header>
 
+<div id="notice">
+  <span class="content"></span>
+  <span class="close"><a href="#">Close</a></span>
+</div>
+
 {% if page.draft %}
   <h1 id="draft">Draft</h1>
 {% endif %}
