--- a/_less/main.less
+++ b/_less/main.less
@@ -173,6 +173,7 @@ h1#draft {
 
 #contact { .rounded-corners(5px 5px 0px 0px);
   background: #FFE;
+  border: 1px solid #eed;
   color: @textcolor;
   display: none;
   font-family: @sans;
@@ -199,3 +200,10 @@ h1#draft {
   width: 100%;
   dt { clear: left; float: left; }
   dd { float: left; margin-left: 1ex; } }
+  
+#notice { .rounded-corners(5px);
+  background: #ffe;
+  border: 1px solid #eed;
+  display: none;
+  padding: @basefont;
+  color: @textcolor; }
