lighten up home page

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <header>
-      {% include logo.html %}
       <div id="logotype">
         <h1><a href="/">Phillip Ridlen</a></h1>
       </div>
@@ -16,14 +15,13 @@
       {{ content }}
     </header>
     <footer>
-      copyright twenty-eleven phillip ridlen. //
+      Copyright &copy; 2011 Phillip Ridlen.<br/>
       <ul>
-        <li><a href="http://blog.phillipridlen.com">blog</a></li>
-        <li><a href="http://twitter.com/philtr">twitter</a></li>
-        <li><a href="http://github.com/philtr">github</a></li>
-        <li><a href="http://forrst.me/philtr">forrst</a></li>
-        <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
-        <li><a href="http://philtr.net/">more</a></li>
+          <li><a href="http://blog.phillipridlen.com">blog</a></li>
+        / <li><a href="http://github.com/philtr">github</a></li>
+        / <li><a href="http://twitter.com/philtr">twitter</a></li>
+        / <li><a href="http://forrst.me/philtr">forrst</a></li>
+        / <li><a href="http://linkedin.com/in/philtr">linkedin</a></li>
       </ul>
     </footer>
   </body>
