add link back to home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <header>
+  <div id="home"><a href="http://phillipridlen.com">&larr; <img id="pr" src="/img/phillipridlen.png" /></a>
   <h1 id="title"><a href="/"><span class="p">Phillip&rsquo;s Blog</span> <span class="f">The</span> Notes, Quotes, <span class="f">and</span> Other Miscellany<br/><span class="f">of</span> Phillip T. Ridlen</a></h1>
 </header>
 
